--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empty HTML Page</title>
+    <title>Empty Website</title>
 </head>
 <body>
-    <!-- Content will go here -->
+    <h1>Welcome to my empty website!</h1>
+    <p>This page is linked to an empty JavaScript file.</p>
+
+    <!-- Link to your JavaScript file -->
+    <script src="script.js"></script>
 </body>
 </html>
