--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Empty Website</title>
+    <title>My Empty Website</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>Welcome to my empty website!</h1>
-    <p>This page is linked to an empty JavaScript file.</p>
-
-    <!-- Link to your JavaScript file -->
-    <script src="script.js"></script>
+    <h1>group 10 cisc 322</h1>
+    <script src="js/script.js"></script>
 </body>
 </html>
