--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Group 10 CISC 233</title>
+    <title>Group 10 CISC 322</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
-        <h1>group 10 cisc 233</h1>
+        <h1>group 10 assignment CISC 322</h1>
     </div>
     <script src="js/script.js"></script>
 </body>
 </html>
+
