--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 </head>
 <body>
     <div class="container">
-        <h1>group 10 assignment CISC 322 and The quick brown fox jumps over the lazy dog</h1>
+        <h1>group 10 assignment CISC 322</h1>
+        <p>The quick brown fox jumps over the lazy dog</p>
     </div>
     <script src="js/script.js"></script>
 </body>
 </html>
-
