--- a/index.html
+++ b/index.html
@@ -16,10 +16,11 @@
 </head>
 <body>
     <div class="container">
-        <h1>group 10 assignment CISC 322</h1>
+        <h1>Group 10 Assignment CISC 322</h1>
         <p>The quick brown fox jumps over the lazy dog</p>
     </div>
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
