--- a/index.html
+++ b/index.html
@@ -20,13 +20,14 @@
 <body>
     <div class="container">
         <h1>Group 10 Assignment CISC 322</h1>
-        <h2>Group Name: Insert Name Here</h2>
+        <h2>Group Name: Welcome to my Homapage </h2>
         <h2>Members: Alec Nakhnikian, Ori Dembo, Tomer Lapid, Linus Li, Mathieu Chretien, Logan Bramwell</h2>
         <p>The quick brown fox jumps over the lazy dog</p>
     </div>
     <script src="js/script.js"></script>
 </body>
 </html>
+
 
 
 
