Transform website to Y2K aesthetic with retro color scheme and homepage branding

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #ffffff 0%, #a24b4b 100%);
             min-height: 100vh;
             padding: 20px;
         }
@@ -233,7 +233,7 @@
     <div class="container">
         <header>
             <h1>CISC 322 - Group 10</h1>
-            <p>Welcome to our course project hub</p>
+            <p>Welcome to our homepage</p>
         </header>
 
         <div class="tabs">
@@ -290,7 +290,7 @@
         </div>
 
         <footer>
-            <p>&copy; 2024 CISC 322 - Group 10. All rights reserved.</p>
+            <p>&copy; 2024 CISC 322 - welcome to my homepage. All rights reserved.</p>
         </footer>
     </div>
 
