--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CISC 322 - Group 10</title>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap');
+
         * {
             margin: 0;
             padding: 0;
@@ -12,75 +14,133 @@
         }
 
         body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #ffffff 0%, #a24b4b 100%);
+            font-family: 'Courier New', monospace;
+            background: #000000 url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="100"><rect fill="%23000" width="100" height="100"/><circle cx="50" cy="50" r="1" fill="%23333"/><circle cx="20" cy="20" r="1" fill="%23333"/><circle cx="80" cy="80" r="1" fill="%23333"/></svg>');
             min-height: 100vh;
             padding: 20px;
+            color: #00ff00;
+            text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00;
+            overflow-x: hidden;
+        }
+
+        body::before {
+            content: '';
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background:
+                repeating-linear-gradient(
+                    0deg,
+                    rgba(0, 255, 0, 0.03),
+                    rgba(0, 255, 0, 0.03) 1px,
+                    transparent 1px,
+                    transparent 2px
+                );
+            pointer-events: none;
+            z-index: 1;
+            animation: scanlines 8s linear infinite;
+        }
+
+        @keyframes scanlines {
+            0% { transform: translateY(0); }
+            100% { transform: translateY(10px); }
         }
 
         .container {
             max-width: 1200px;
             margin: 0 auto;
-            background: white;
-            border-radius: 15px;
-            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.3);
+            background: #001a00;
+            border: 3px solid #00ff00;
+            box-shadow:
+                0 0 20px #00ff00,
+                0 0 40px #00ff00,
+                inset 0 0 20px rgba(0, 255, 0, 0.1);
             overflow: hidden;
+            position: relative;
+            z-index: 2;
         }
 
         header {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            background: #000000;
+            color: #00ff00;
             padding: 40px 20px;
             text-align: center;
+            border-bottom: 3px solid #00ff00;
+            box-shadow: 0 0 20px #00ff00;
         }
 
         header h1 {
-            font-size: 2.5em;
+            font-family: 'Orbitron', monospace;
+            font-size: 3em;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+            text-shadow:
+                0 0 10px #00ff00,
+                0 0 20px #00ff00,
+                0 0 30px #ffff00,
+                0 0 40px #ff00ff;
+            letter-spacing: 3px;
+            animation: glow 2s ease-in-out infinite;
+        }
+
+        @keyframes glow {
+            0%, 100% { text-shadow: 0 0 10px #00ff00, 0 0 20px #00ff00; }
+            50% { text-shadow: 0 0 20px #00ff00, 0 0 40px #ffff00, 0 0 60px #ff00ff; }
         }
 
         header p {
-            font-size: 1.1em;
-            opacity: 0.95;
+            font-size: 1.2em;
+            color: #ffff00;
+            text-shadow: 0 0 10px #ffff00;
+            letter-spacing: 2px;
         }
 
         .tabs {
             display: flex;
-            background: #f8f9fa;
-            border-bottom: 2px solid #e9ecef;
+            background: #000000;
+            border-bottom: 3px solid #00ff00;
             flex-wrap: wrap;
+            box-shadow: 0 0 15px #00ff00;
         }
 
         .tab-button {
             flex: 1;
             min-width: 150px;
             padding: 15px 20px;
-            border: none;
-            background: none;
+            border: 2px solid #00ff00;
+            background: #001a00;
             cursor: pointer;
             font-size: 1em;
             font-weight: 600;
-            color: #495057;
+            color: #00ff00;
             transition: all 0.3s ease;
-            border-bottom: 3px solid transparent;
+            font-family: 'Courier New', monospace;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            margin: 5px;
         }
 
         .tab-button:hover {
-            background: #e9ecef;
-            color: #667eea;
+            background: #003300;
+            box-shadow: 0 0 15px #00ff00, inset 0 0 10px rgba(0, 255, 0, 0.3);
+            text-shadow: 0 0 10px #ffff00;
         }
 
         .tab-button.active {
-            color: #667eea;
-            border-bottom-color: #667eea;
-            background: white;
+            color: #ffff00;
+            background: #003300;
+            box-shadow: 0 0 20px #ffff00, inset 0 0 15px rgba(255, 255, 0, 0.3);
+            text-shadow: 0 0 15px #ffff00;
+            border-color: #ffff00;
         }
 
         .tab-content {
             display: none;
             padding: 40px;
             animation: fadeIn 0.3s ease;
+            background: #001a00;
+            color: #00ff00;
         }
 
         .tab-content.active {
@@ -100,62 +160,77 @@
 
         .content-section {
             margin-bottom: 30px;
+            border: 2px solid #00ff00;
+            padding: 20px;
+            background: #000000;
+            box-shadow: 0 0 15px rgba(0, 255, 0, 0.3);
         }
 
         .content-section h2 {
-            color: #667eea;
+            color: #ffff00;
             margin-bottom: 15px;
             font-size: 1.8em;
-            border-bottom: 2px solid #667eea;
+            border-bottom: 2px solid #ffff00;
             padding-bottom: 10px;
+            text-shadow: 0 0 10px #ffff00;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-family: 'Orbitron', monospace;
         }
 
         .content-section p {
-            color: #495057;
+            color: #00ff00;
             line-height: 1.8;
             margin-bottom: 15px;
+            text-shadow: 0 0 5px #00ff00;
         }
 
         .pdf-container {
-            background: #f8f9fa;
-            border-radius: 10px;
+            background: #000000;
+            border: 3px solid #00ff00;
             padding: 20px;
             margin: 20px 0;
-            border: 2px solid #e9ecef;
+            box-shadow: 0 0 20px #00ff00, inset 0 0 10px rgba(0, 255, 0, 0.1);
         }
 
         .pdf-container h3 {
-            color: #667eea;
+            color: #ffff00;
             margin-bottom: 15px;
+            text-shadow: 0 0 10px #ffff00;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         .pdf-embed {
             width: 100%;
             height: 600px;
-            border: none;
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            border: 2px solid #00ff00;
+            box-shadow: 0 0 15px #00ff00;
+            background: #001a00;
         }
 
         .video-container {
-            background: #f8f9fa;
-            border-radius: 10px;
+            background: #000000;
+            border: 3px solid #ff00ff;
             padding: 20px;
             margin: 20px 0;
-            border: 2px solid #e9ecef;
+            box-shadow: 0 0 20px #ff00ff, inset 0 0 10px rgba(255, 0, 255, 0.1);
         }
 
         .video-container h3 {
-            color: #667eea;
+            color: #ff00ff;
             margin-bottom: 15px;
+            text-shadow: 0 0 10px #ff00ff;
+            text-transform: uppercase;
+            letter-spacing: 2px;
         }
 
         .video-embed {
             width: 100%;
             height: 400px;
-            border: none;
-            border-radius: 8px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+            border: 2px solid #ff00ff;
+            box-shadow: 0 0 15px #ff00ff;
+            background: #001a00;
         }
 
         .button-group {
@@ -167,48 +242,63 @@
 
         .btn {
             padding: 12px 24px;
-            border: none;
-            border-radius: 8px;
+            border: 2px solid;
             font-size: 1em;
             font-weight: 600;
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
             display: inline-block;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            font-family: 'Courier New', monospace;
         }
 
         .btn-primary {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-            color: white;
+            background: #000000;
+            color: #00ff00;
+            border-color: #00ff00;
+            box-shadow: 0 0 10px #00ff00;
+            text-shadow: 0 0 5px #00ff00;
         }
 
         .btn-primary:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 20px rgba(102, 126, 234, 0.4);
+            background: #003300;
+            box-shadow: 0 0 20px #00ff00, inset 0 0 10px rgba(0, 255, 0, 0.3);
+            text-shadow: 0 0 10px #ffff00;
+            color: #ffff00;
+            border-color: #ffff00;
         }
 
         .btn-secondary {
-            background: #e9ecef;
-            color: #667eea;
-            border: 2px solid #667eea;
+            background: #000000;
+            color: #ff00ff;
+            border-color: #ff00ff;
+            box-shadow: 0 0 10px #ff00ff;
+            text-shadow: 0 0 5px #ff00ff;
         }
 
         .btn-secondary:hover {
-            background: #667eea;
-            color: white;
+            background: #330033;
+            box-shadow: 0 0 20px #ff00ff, inset 0 0 10px rgba(255, 0, 255, 0.3);
+            text-shadow: 0 0 10px #ffff00;
+            color: #ffff00;
+            border-color: #ffff00;
         }
 
         footer {
-            background: #f8f9fa;
+            background: #000000;
             padding: 20px;
             text-align: center;
-            color: #495057;
-            border-top: 2px solid #e9ecef;
+            color: #00ff00;
+            border-top: 3px solid #00ff00;
+            box-shadow: 0 0 15px #00ff00;
+            text-shadow: 0 0 5px #00ff00;
         }
 
         @media (max-width: 768px) {
             header h1 {
-                font-size: 1.8em;
+                font-size: 2em;
             }
 
             .tab-button {
@@ -225,6 +315,10 @@
             .video-embed {
                 height: auto;
                 min-height: 300px;
+            }
+
+            body::before {
+                animation: scanlines 4s linear infinite;
             }
         }
     </style>
