Fix PowerPoint embedding - use direct download link instead of online viewer

--- a/index.html
+++ b/index.html
@@ -429,8 +429,12 @@
             <!-- Presentation embed (PowerPoint) -->
             <div class="presentation-container">
                 <h3>🖥️ Presentation Slides</h3>
-                <iframe class="presentation-embed" src="https://view.officeapps.live.com/op/embed.aspx?src=https://github.com/ItsDembo/CISC-322-website/raw/main/A1/CISC%20322%20A1%20Presentation.pptx" title="A1 Presentation" loading="lazy"></iframe>
-                <p style="margin-top:8px;">Download: <a href="A1/CISC 322 A1 Presentation.pptx" download>CISC 322 A1 Presentation.pptx</a></p>
+                <div style="background: #001a00; border: 2px solid #ffff00; padding: 30px; text-align: center; border-radius: 5px;">
+                    <p style="color: #ffff00; font-size: 1.2em; margin-bottom: 15px; text-shadow: 0 0 10px #ffff00;">📊 PowerPoint Presentation</p>
+                    <p style="color: #00ff00; margin-bottom: 20px;">Click below to download and view the presentation slides:</p>
+                    <a href="A1/CISC 322 A1 Presentation.pptx" download class="btn btn-primary" style="display: inline-block; margin: 10px;">⬇️ Download Presentation</a>
+                    <p style="color: #00ff00; margin-top: 20px; font-size: 0.9em;">Requires: Microsoft PowerPoint, Google Slides, or compatible viewer</p>
+                </div>
             </div>
 
             <div class="video-container">
